# libxmlpl-cpp-standard

./: .gitignore  Makefile.am  README.md  configure.ac
debian/: README.Debian  changelog  control  copyright  rules
scripts/: Makefile.am  libxmlpl_cpp_standard-config.in
src/: Makefile.am
src/xmlpl/: Makefile.am  curl-0.0.1.xpl  dirent-0.0.1.xpl  gen-0.0.1.xpl  math-0.0.1.xpl  process-0.0.1.xpl  stdio-0.0.1.xpl  stdlib-0.0.1.xpl  string-0.0.1.xpl  time-0.0.1.xpl  unistd-0.0.1.xpl  xml-0.0.1.xpl
